--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,12 +15,32 @@
 <!-- <video autoplay loop class="fillWidth">
   <source src="/assets/A0482_F1507_P2_Green_Comp_1.mov" type="video/mp4" />
 </video> -->
-<h4 id="title">Welcome to My World</h4>
+<h4 id="title">Design by</h4>
 <h2>Tal Haberer</h2>
+
+  <div id="load">
+    <div>R</div>
+    <div>E</div>
+    <div>R</div>
+    <div>E</div>
+    <div>B</div>
+    <div>A</div>
+    <div>H</div>
+  </div>
+
 <!-- <img class="poly" src="/assets/polygonORANGE.png" alt="" /> -->
 </div>
 
 <div class="container">
+  <div class="class">
+
+  </div>
+  <div class="class">
+
+  </div>
+  <div class="class">
+
+  </div>
 
 
 </div>
